# license-file-aggregator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
cert/: cert.crt  key.pem  root_cert.crt
cert/local/: cert.crt  key.pem
src/: App.cpp  AppComponent.hpp  CMakeLists.txt  main.cpp  shared.h  shared.hpp
src/api/: API.cpp  API.h  CMakeLists.txt
src/client/: client.hpp
src/controller/: Controller.hpp  MyController.hpp  error.hpp
src/dto/: DTOs.hpp
src/error/: error.cpp  error.hpp
src/file/: CMakeLists.txt  fileHandler.cpp  fileHandler.h  fileHandler.hpp
src/ssl/: certificates.cpp  certificates.hpp
test/: ControllerTest.cpp  ControllerTest.hpp  MyControllerTest.cpp  tests.cpp
test/app/: ApiTestClient.hpp  MyApiTestClient.hpp  TestComponent.hpp
